--- a/client/src/pages/ChatsPage/ChatsPage.module.css
+++ b/client/src/pages/ChatsPage/ChatsPage.module.css
@@ -13,7 +13,6 @@
 .content {
   flex: 1;
   position: relative;
-  isolation: isolate;
   overflow: hidden;
 }
 
