--- a/client/src/pages/MoviesPage/MoviesPage.module.css
+++ b/client/src/pages/MoviesPage/MoviesPage.module.css
@@ -211,7 +211,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 100;
+  z-index: 1102;
   padding: 2rem;
 }
 
