--- a/client/src/widgets/MainLayout/MainLayout.module.css
+++ b/client/src/widgets/MainLayout/MainLayout.module.css
@@ -16,7 +16,6 @@
   flex-direction: column;
   min-height: 0;
   position: relative;
-  isolation: isolate;
   overflow: hidden;
 }
 
